# project-playwright-tia

./: .env.example  .gitignore  README.md  articles_20250116_184535.json  check_page.py  current_page.html  individual-article-page.html  main.py  pyproject.toml  requirements.txt  run_scraper.py  test01.ipynb  test_scraper.py
app/: __init__.py  api.py  core.py  human_behavior.py  logger.py  models.py  scraper.py  utils.py
app/scraper/: __init__.py  browser.py  content_extractor.py  main.py  parser.py  storage.py
app/static/css/: styles.css
app/static/js/: form-validation.js  results-handler.js
app/templates/: base.html  index.html  results.html
output/: techinasia_ai_news_v1_batch_0_20250115_154353.csv
static/css/: styles.css
templates/: results.html
tests/: __init__.py  run_tests.py  test_browser.py  test_content_extractor.py  test_main.py  test_parser.py
