[project]
name = "techinasia-scraper-app"
version = "0.1.0"
description = "Web scraper for TechInAsia with FastAPI"
authors = [
{ name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
 "fastapi",
 "uvicorn",
 "pydantic",
 "playwright",
 "beautifulsoup4",
 "pandas",
 "python-dateutil",
 "tqdm",
 "jinja2",
 "python-multipart",
]

 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"